# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-12-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_map_reduce name argument for the
      suspend/resume service name

2019-11-30 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API services_suspend and services_resume
      functions to pause the processing of incoming service messages
    * Fix cloudi_service_shell directory setting when
      user is provided with login as true
    * Add cloudi_service_map_reduce suspend/resume functionality

2019-11-28 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 1.8.0 released

2019-11-27 Michael Truog   <mjtruog at protonmail dot com>

    * Remove deprecated types from Python and Python/C CloudI API
    * Remove deprecated type value in cloudi Erlang module

2019-11-26 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_shell setting env for login su shell

2019-11-25 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_environment:transform and add environment.py
      integration test checks based on the current parsing
    * Add login argument to cloudi_service_shell

2019-11-23 Michael Truog   <mjtruog at protonmail dot com>

    * Change cloudi_environment:transform to allow unicode env names
    * Add unicode error handling during external service start
    * Change cloudi_os_spawn executable name to lack _vsn_1 suffix

2019-11-17 Michael Truog   <mjtruog at protonmail dot com>

    * Enable logging of unicode data used in error messages,
      function names, filenames, service name patterns, etc.

2019-11-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add support for unicode to cloudi_service_shell
    * Add elapsed time to cloudi_service_cron log output
    * Fix handling of external service unicode strings for
      file_path, args and env string data (encoded as utf-8)
